--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 kotlin.code.style=official
 
-minecraftVersion=1.21
-pluginVersion=2.1-TEMPLATE
+minecraftVersion=1.21.1
+pluginVersion=b1
 
 exposedVersion=0.51.1
 hikariCPVersion=5.1.0
@@ -12,17 +12,6 @@ fruxzStackedVersion=2024.1.1
 
 kotlinxCoroutinesCoreVersion=1.9.0-RC
 kotlinxCollectionsImmutableVersion=0.3.7
-
 gsonVersion=2.11.0
-
 slf4jVersion=2.0.13
-
-voicechatApiVersion=2.5.0
-
-ktorVersion=2.3.12
-
 mcCoroutineVersion=2.18.0
-
-opus4jVersion=2.0.2
-gagravarrVorbisVersion=0.8
-vorbisVersion=1.2.1
